--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost/pokemon-master?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost/pokedex?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
